Finished tables and styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,97 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>REPLACE THIS WITH A TABLE TITLE</h1>
-    <div class="table-container">REPLACE THIS WITH YOUR GENERATED TABLE</div>
+    <h1>LOWELL'S DJ SONG LIST</h1>
+    <div class="table-container">
+
+    
+      <table class="demo">
+          <th>Artist Name</th>
+          <th>Song Name</th>
+          <th>Release Date</th>
+          <th>Country of Origin</th>
+          <th>Style of Music</th>
+          <th>Ratings</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>Juice Wrld</td>
+          <td>World Tour</td>
+          <td>&nbsp;Sept 9, 2024</td>
+          <td>United States</td>
+          <td>Hip-Hop/Rap</td>
+          <td>8/10</td>
+        </tr>
+        <tr>
+          <td>Lil Uzi Vert</td>
+          <td>Chill bae&nbsp;</td>
+          <td>&nbsp;Nov 1, 2024</td>
+          <td>United States</td>
+          <td>Hip-Hop/Rap&nbsp;</td>
+          <td>8/10</td>
+        </tr>
+        <tr>
+          <td>&nbsp;YoungBoy Never Broke Again</td>
+          <td>&nbsp;Nevada</td>
+          <td>&nbsp;July 7, 2021</td>
+          <td>United States</td>
+          <td>Hip-Hop/Rap</td>
+          <td>9/10</td>
+        </tr>
+        <tr>
+          <td>Lil Uzi Vert&nbsp;</td>
+          <td>&nbsp;Red Moon</td>
+          <td>Dec 23, 2023&nbsp;</td>
+          <td>United States&nbsp;</td>
+          <td>Hip-Hop/Rap</td>
+          <td>7/10</td>
+        </tr>
+        <tr>
+          <td>&nbsp;Juice Wrld</td>
+          <td>&nbsp;Armed and Dangerous</td>
+          <td>&nbsp;Oct 18, 2018</td>
+          <td>United States</td>
+          <td>Hip-Hop/Rap</td>
+          <td>10/10</td>
+        </tr>
+        <tr>
+          <td>&nbsp;Lil Uzi Vert&nbsp;</td>
+          <td>Venetia&nbsp;</td>
+          <td>Mar 6, 2020&nbsp;</td>
+          <td>United States&nbsp;</td>
+          <td>Hip-Hop/Rap</td>
+          <td>10/10</td>
+        </tr>
+        <tr>
+          <td>Juice Wrld&nbsp;</td>
+          <td>Both Ways&nbsp;</td>
+          <td>Oct 14, 2024&nbsp;</td>
+          <td>United States</td>
+          <td>Hip-Hop/Rap</td>
+          <td>9/10</td>
+        </tr>
+        <tr>
+          <td>Future&nbsp;</td>
+          <td>BRAZZIER&nbsp;</td>
+          <td>Sept 20, 2024&nbsp;</td>
+          <td>United States</td>
+          <td>Hip-Hop/Rap</td>
+          <td>7/10</td>
+        </tr>
+        <tr>
+          <td>&nbsp;Lil Uzi Vert</td>
+          <td>&nbsp;Do What I Want</td>
+          <td>&nbsp;July 31, 2016</td>
+          <td>United States&nbsp;</td>
+          <td>Hip-Hop/Rap</td>
+          <td>10/10</td>
+        </tr>
+        <tbody>
+      </table>
+
+<footer>2024 Lowell</footer>
+
+    </div>
   </body>
 </html>
